# learn-python

./: .gitignore  CNAME  README.md  index.html  index.md  myst.yml  pyproject.toml  root.md  toc.yml
.github/workflows/: deploy.yml
00-drafts/: 02-geospatial-python-01.ipynb  02-geospatial-python-02.ipynb
01-before-you-begin/: 00-about.md
02-essentials/: 00-about.md  01_getting_started.ipynb  02_variables_data_types_scope.ipynb  03_data_structures.ipynb  06_lambda_map_filter.ipynb  10_errors_and_exceptions.ipynb  11_basic_visualizations.ipynb
03-arrays-and-dataframes/: 00-about.md  01_arrays.ipynb  02_dataframes.ipynb  99.1_additional_exercises_dataframes.py  99_exercises.ipynb
03-arrays-and-dataframes/__marimo__/session/: 99.1_additional_exercises_01.py.json  99.1_additional_exercises_02.py.json  99.1_additional_exercises_dataframes.py.json  jan-15-2025_additional-exer1_solution.py.json  jan-15-2025_additional-exer2_solution.py.json  jan-15-2025_additional-exer_dataframes-only_solution.py.json
04-intro-to-AI-+-ML/: 97-knowledge-check.ipynb
05-geopython-+-ML/01-GEE/: 01.05-gee_machine-learning-classifiers.ipynb
05-geopython-+-ML/04-GeoAI/: 04.01-geoai_downloading-data.ipynb
05-geospatial-python/: 01-gee-to-python.ipynb  02-geospatial-python-03.ipynb  02-geospatial-python-03.py  03-geoai-01.ipynb  03-geoai-setup.py  03-geoai-sklearn.py  opt.py
arrays-and-dataframes/: 01_arrays.ipynb  02_dataframes.ipynb
before-you-begin/: 01-why-python.md  02-tips-to-get-started.md  05-ide.md
essentials/: 00-about.md  01_getting_started.ipynb
