[project]
name = "python-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-book>=2.1.0",
    "jupyter>=1.1.1",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "seaborn>=0.13.2",
    "duckdb>=1.4.3",
    "dask[complete]>=2025.12.0",
]
